--- a/content/notes/UWAA556/ch02-2.md
+++ b/content/notes/UWAA556/ch02-2.md
@@ -96,7 +96,7 @@ We can also use the product rule on the momentum flux
 {{< katex display >}}
 \partial_j (m n v_i v_j) = v_i \partial_j (m n v_j) + m n v_j \partial_j (v_i)
 {{< /katex >}}
-Collecting the \\( v_i \\) terms, we get a simplified equation
+Collecting the \\( v_i \\) terms, we get a simplified equation of motion for the cold plasma
 {{< katex display >}}
 n_\alpha m_\alpha \dv{\vec v_\alpha}{t} = q_\alpha n_\alpha (\vec E + \vec v_\alpha \cross \vec B)
 {{< /katex >}}
@@ -106,3 +106,405 @@ where we're using the total derivative
 {{< /katex >}}
 
 ### Linearization of Equation of Motion
+
+If we encounter a non-linear differential equation, our technique of applying a Fourier transform to obtain the dispersion relation won't work so well because we'll get convolutions in the Fourier transforms. This means that we can't solve non-linear differential equations with the same spectral method.
+
+But, if we look at waves/perturbations of small amplitude, then linear dynamics are dominant and we can "linearize" the equation of motion to obtain an equation we can easily solve. If we only consider small amplitude waves, the non-linearity does not come into effect.
+
+When we **linearize an equation about an equilibrium**, we are breaking up the equation into a hierarchy. We start by considering the Taylor expansion of our quantity of interest about some equilibrium \\( f_0 \\)
+
+{{< katex display >}}
+\dv{f}{t} = A f \qquad f = f_0 + \epsilon f_1 + \epsilon ^2 f_2 + \epsilon_3 f_3 + \ldots
+{{< /katex >}}
+
+{{< katex display >}}
+\dv{f_0}{t} = A_0 f_0 \quad \dv{f_1}{t} = A_1 f_1 + A_{00} f_0 \quad \ldots
+{{< /katex >}}
+
+If we choose to expand about an equilibrium, then the zero-order component is static and we can ignore it. One of the most useful and simple equilibria is a homogeneous, flat, invariant plasma, meaning the plasma is characterized by a zero-order density that is constant, and is not moving.
+
+{{< katex display >}}
+n_0(\vec x, t) = n_0
+{{< /katex >}}
+{{< katex display >}}
+\vec v_0 (\vec x, t) = 0
+{{< /katex >}}
+
+We'll also take the background electric field to be zero, because the background charge density is zero
+{{< katex display >}}
+\vec E_0 ( \vec x, t) = 0
+{{< /katex >}}
+And we'll take the background magnetic field to be uniform and constant
+{{< katex display >}}
+\vec B_0(\vec x, t) = \vec B_0 = \text{const.}
+{{< /katex >}}
+
+Of course, the really interesting stuff happens when we have an inhomogeneous plasma with pressure and density gradients, so we will be discussing the inhomogeneous case, but first we need to set up our foundation with the zero-order situation.
+
+Our homogeneous expansion will be
+
+{{< katex display >}}
+n(\vec x, t) = n_0 + n_1 + \ldots
+{{< /katex >}}
+{{< katex display >}}
+\vec v(\vec x, t) = \vec v_1 + \ldots
+{{< /katex >}}
+{{< katex display >}}
+\vec E = \vec E_1 + \ldots
+{{< /katex >}}
+{{< katex display >}}
+\vec B = \vec B_0 + \vec B_1 + \ldots
+{{< /katex >}}
+To obtain the first-order equation, we substitute our linearized quantities and ignore any products of first-order quantities.
+{{< katex display >}}
+\partial _t (n_0 + n_1) + \div ((n_0 + n_1) \vec v_1) = 0
+{{< /katex >}}
+The background density is constant in both space and time, so
+{{< katex display >}}
+\partial_t n_1 + n_0 \div \vec v_1 = 0
+{{< /katex >}}
+Doing the same thing with the momentum equation,
+{{< katex display >}}
+m_\alpha\dv{\vec v_\alpha}{t} = q_\alpha(\vec E + \vec v_\alpha \cross \vec B)
+{{< /katex >}}
+{{< katex display >}}
+\dv{v}{t} = \pdv{\vec v}{t} + (\vec v \cdot \grad) \vec v
+{{< /katex >}}
+In the total derivative, only the partial time derivative will survive to first order, because the other terms will be second-order.
+{{< katex display >}}
+\vec v_\alpha \cross \vec B = \vec v_{1, \alpha} \cross (\vec B_0 + \vec B_1) \rightarrow \vec v_{1, \alpha} \cross \vec B_0
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow m_\alpha \pdv{\vec v_{\alpha, 1}}{t} = q_\alpha(\vec E_1 + \vec v_{1, \alpha} \cross \vec B_0)
+{{< /katex >}}
+Note that the first-order magnetic field is not part of the first-order linear dynamics
+- \\( E_1 \\) has linear acceleration
+- \\( B_0 \\) has linear acceleration
+So the electric and magnetic fields have different positions in our hierarchy of linearization.
+{{< katex display >}}
+\partial _t n_{\alpha, 1} + n_{\alpha, 0} \div \vec v_{\alpha, 1} = 0
+{{< /katex >}}
+{{< katex display >}}
+\partial_t \vec v_{\alpha, 1} = \frac{q_\alpha}{m_\alpha} (\vec E_1 + \vec v_{\alpha, 1} \cross \vec B_0)
+{{< /katex >}}
+
+
+For a cold plasma, the linearized equation of motion is the same as the equation of motion for a single particle. Without pressure, all particles in the cloud of density \\( n_\alpha \\) will respond identically to the forces.
+
+The initial velocity \\( v_{\alpha, 1}(t = 0) \\) is important, because the direction relative to \\( \vec B_0 \\) determines whether the plasma is magnetized.
+
+Those are the plasma equations taken care of, but we also need the Maxwell equations. Lucky for us, Faraday's law and Ampere's law are already linear equations
+{{< katex display >}}
+\curl \vec E = - \pdv{\vec B}{t}
+{{< /katex >}}
+{{< katex display >}}
+\curl \vec B = \mu_0 \vec j + c^{-2} \pdv{\vec E}{t}
+{{< /katex >}}
+The only linearization we need to do is to consider only the current due to linear response in Ampere's law.
+
+We can combine Ampere's law and Faraday's law to get a second-order wave equation:
+{{< katex display >}}
+\curl (\text{Faraday}) \rightarrow \curl \curl \vec E = - \pdv{}{t} \curl \vec B
+{{< /katex >}}
+{{< katex display >}}
+\pdv{}{t} (\text{Ampere}) \rightarrow - \pdv{}{t} \curl \vec B = - \mu_0 \pdv{}{t} \vec j - c^{-2} \pdv{^2 \vec E}{t^2}
+{{< /katex >}}
+If we combine the two, we get
+{{< katex display >}}
+\frac{1}{c^2} \pdv{^2 \vec E}{t^2} + \curl \curl \vec E = - \mu_0 \pdv{\vec j}{t}
+{{< /katex >}}
+This is called the **Helmholtz wave equation**, when the space operator for the wave equation is given by two curls.
+Using the vector identiy
+{{< katex display >}}
+\curl \curl \vec E = \grad (\div \vec E) - \grad ^2 \vec E
+{{< /katex >}}
+we can re-write the Helmholtz wave equation
+{{< katex display >}}
+\frac{1}{c^2} \pdv{^2 \vec E}{t^2} - \grad ^2 \vec E = - \mu_0 \pdv{\vec j}{t} - \epsilon_0 \grad \rho_c
+{{< /katex >}}
+Alternatively, we can reverse the process with Faraday and Ampere to get a second wave equation for the magnetic field:
+{{< katex display >}}
+\frac{1}{c^2} \pdv{^2 \vec B}{t^2} + \curl \curl \vec B = \mu_0 \curl \vec j
+{{< /katex >}}
+Suppose we have free-space propagating waves with \\( \vec j = 0 \\) and \\( \rho = 0 \\), then we get
+{{< katex display >}}
+\pdv{^2 \vec E}{t^2} - c^2 \grad ^2 \vec E = 0
+{{< /katex >}}
+{{< katex display >}}
+\pdv{^2 \vec B}{t^2} - c^2 \grad ^2 \vec B = 0
+{{< /katex >}}
+So we expect that in free space, both \\( \vec E \\) and \\( \vec B \\) will propagate at speed \\( c \\). Also in free space,
+{{< katex display >}}
+\div \vec E = 0 \qquad \div \vec B = 0
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \vec k \cdot \vec E = 0 \qquad \vec k \cdot \vec B = 0
+{{< /katex >}}
+such that \\( \vec E \\) and \\( \vec B \\) must both be perpendicular to the direction of propagation; we will have transverse wave solutions.
+
+In an unmagnetized plasma,
+{{< katex display >}}
+\pdv{\vec v_{\alpha, 1}}{t} = \frac{q_\alpha}{m_\alpha} \vec E_1
+{{< /katex >}}
+{{< katex display >}}
+\vec j = \sum_\alpha q_\alpha n_\alpha \vec v_\alpha
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \pdv{\vec j}{t} = \sum_\alpha q_\alpha n_{0, \alpha} \pdv{\vec v_{1, \alpha}}{t}
+{{< /katex >}}
+{{< katex display >}}
+=\sum_\alpha \frac{q_\alpha ^2 n_{0, \alpha}}{m_\alpha} \vec E_1
+{{< /katex >}}
+{{< katex display >}}
+\pdv{\vec j}{t} = \left(\sum_\alpha \omega_{p, \alpha} ^2 \right) \epsilon_0 \vec E_1
+{{< /katex >}}
+If we define a single combined plasma frequency
+{{< katex display >}}
+\omega_p ^2 = \sum_\alpha \omega_{p, \alpha} ^2
+{{< /katex >}}
+
+{{< katex display >}}
+\pdv{\vec j}{t} = \omega_p ^2 \epsilon_0 \vec E_1
+{{< /katex >}}
+Plugging this back into the Helmholtz equation:
+{{< katex display >}}
+\rightarrow \frac{1}{c^2} \pdv{^2 \vec E}{t^2} + \curl \curl \vec E = - \mu_0 \omega_p ^2 \epsilon_0 \vec E
+{{< /katex >}}
+{{< katex display >}}
+\pdv{^2 \vec E}{t^2} + c^2 \curl \curl \vec E + \omega_p ^2 \vec E = 0
+{{< /katex >}}
+So we have a wave equation with a source term \\( \omega_p ^2 \vec E \\)
+
+### Transverse Waves
+
+If we look at the space propagation equation,
+{{< katex display >}}
+\pdv{^2 \vec E}{t^2} - c^2 \grad ^2 \vec E = 0
+{{< /katex >}}
+our solutions will be traveling plane waves
+{{< katex display >}}
+\vec E = \vec E_0 e^{i (\vec k \cdot \vec x - \omega t)} \qquad - \omega ^2 + c^2 k^2 = 0
+{{< /katex >}}
+Without loss of generality, if the wave is traveling in the \\( z \\) direction \\( \vec k = k \hat z \\), then \\( \hat E_z = 0 \\). Each of the other components can be written in terms of a complex phase \\( \theta \\)
+{{< katex display >}}
+E_{0, x} = E_{00, x} e^{i \theta_x}
+{{< /katex >}}
+{{< katex display >}}
+E_{0, y} = E_{00, y} e^{i \theta_y}
+{{< /katex >}}
+{{< katex display >}}
+\vec E = E_x \hat x + E_y \hat y
+{{< /katex >}}
+{{< katex display >}}
+E_x = E_{00, x} e^{i (kz - \omega t + \theta_x)}
+{{< /katex >}}
+{{< katex display >}}
+E_y = E_{00, y} e^{i (kz - \omega t + \theta_y)}
+{{< /katex >}}
+The wave equation in free space admits waves whose transverse components allow for arbitrarily different phase shifts.
+Plane wave solutions will fall into one of three categories:
+- Linear polarization
+If one of the components is always zero, e.g. \\( E_y = 0 \\), then the field will oscillate along a single (linear) direction.
+- Circular polarization
+We could also have \\( E_{0, x} = E_{0, y} \\). For example, a wave in which the phases are
+{{< katex display >}}
+\theta_x = 0 \qquad \theta_y = - \pi / 2
+{{< /katex >}}
+is a left-handed circularly polarized wave. Similarly \\( \theta_x = 0 \\) \\( \theta_y = \pi/2 \\) is a right-handed circularly polarized wave
+- Elliptical polarization
+The general case we'll run into is \\( \theta_x, \theta_y \neq 0, \pi/2 \\), \\( \theta_x \neq \theta_y \\), and \\( E_{0, x} \neq E_{0, y} \\). Then we'll have an elliptical polarization diagram that spins and has a changing amplitude as it rotates.
+
+From Faraday's law:
+{{< katex display >}}
+\vec B_1 = \frac{\vec k}{\omega} \cross \vec E
+{{< /katex >}}
+If \\( \omega \\) is purely real, then \\( \vec B_1 \\) is perpendicular to \\( \vec E \\) and the two are completely in phase. However, if \\( \omega \\) is complex then they are not in phase and you'll have a phase shift in the magnetic field relative to the electric field.
+
+### Coherent and Incoherent Polarization
+
+In general, the solution to
+{{< katex display >}}
+\pdv{^2 \vec E}{t^2} = c^2 \grad ^2 \vec E
+{{< /katex >}}
+is going to be a sum of a whole bunch of different frequency components
+{{< katex display >}}
+\vec E = \int \vec A(\vec k) e^{i (\vec k \cdot \vec x - \omega t)} \dd k
+{{< /katex >}}
+If \\( \vec E \\) has a single wavelength, then the wavefield is called coherent. But when a signal has many frequencies, as is the case with most light sources, then coherency falls apart quickly and we have incoherent polarization. Most light sources have no coherent polarization, and even if we pass light with some bandwidth through a polarizer it will only remain coherent for a limited time called the decoherence time, which is related to the frequency bandwidth
+{{< katex display >}}
+\tau \sim 1 / \Delta f
+{{< /katex >}}
+Lasers remain coherent for a long time because they have a very small frequency bandwidth.
+
+### Refraction
+
+We're going to be talking about electromagnetic waves in media, so we're going to need to go over a whole bunch of optics.
+
+Refraction is what happens when a wave changes direction, generally as a result of inhomogeneity in the medium. The simplest material interaction is when light impinges on a surface.
+
+We imagine a wave \\( \vec k \\) impinging on a material boundary (like the surface of water) with angle \\( \theta_1 \\). We expect some component to continue through the interface in the next medium, making angle \\( \theta_2 \\) with the interface.
+
+Energy conservation demands that the frequency be continuous across the boundary
+{{< katex display >}}
+\omega_1 = \omega_2
+{{< /katex >}}
+If we let our boundary normal be in the \\( y \\) direction, then conservation of momentum in the tangential direction demands that
+{{< katex display >}}
+k_{1, x} = k_{2, x}
+{{< /katex >}}
+{{< katex display >}}
+k_1 \sin \theta_1 = k_2 \sin \theta_2
+{{< /katex >}}
+{{< katex display >}}
+\frac{c k_1}{\omega_1} \sin \theta_1 = \frac{c k_2}{\omega_2} \sin \theta_2
+{{< /katex >}}
+We define the **index of refraction** to get Snell's law
+{{< katex display >}}
+n \equiv \frac{ck}{\omega}
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow n_1 \sin \theta_1 = n_2 \sin \theta_2
+{{< /katex >}}
+
+The index of refraction can also be written as the speed of propagation divided by the phase velocity
+{{< katex display >}}
+n = \frac{c}{v_p} = \frac{\text{velocity in vacuum}}{\text{velocity in medium}}
+{{< /katex >}}
+
+### Wave Properties in Unmagnetized Plasma
+
+Finally we get to the real deal. We take our equation for the time change of current density, and perform a Fourier transform
+{{< katex display >}}
+\pdv{\vec j}{t} = \epsilon_0 \omega_p ^2 \vec E
+{{< /katex >}}
+{{< katex display >}}
+- i \omega \hat \vec j = \epsilon_0 \omega_p ^2 \hat \vec E
+{{< /katex >}}
+{{< katex display >}}
+\hat \vec j = i \frac{\epsilon_0 \omega_p ^2}{\omega} \vec E
+{{< /katex >}}
+When we get a relationship between current and electric field, we've found a conductivity.
+{{< katex display >}}
+\hat \sigma = i \frac{\epsilon_0 \omega_p ^2}{\omega}
+{{< /katex >}}
+In a cold unmagnetized plasma, the conductivity is scalar and purely imaginary. From the definition of the general dielectric constant
+{{< katex display >}}
+\epsilon = \epsilon_0 i \frac{\hat\sigma}{\omega}
+{{< /katex >}}
+{{< katex display >}}
+= \epsilon_0 \left( 1 + i ^2 \frac{\omega_p ^2}{\omega ^2} \right)
+{{< /katex >}}
+{{< katex display >}}
+\epsilon = \epsilon_0 \left( 1 - \frac{\omega_p ^2}{\omega^2} \right)
+{{< /katex >}}
+which gives susceptibility
+{{< katex display >}}
+\hat \chi = - \frac{\omega_p ^2}{\omega ^2}
+{{< /katex >}}
+which is what we found for a free oscillator.
+
+To understand the wave dynamics, we need to look at the wave equation
+{{< katex display >}}
+\pdv{^2 \vec E}{t^2} + c^2 \curl \curl \vec E + \omega_p ^2 \vec E = 0
+{{< /katex >}}
+{{< katex display >}}
+- \omega ^2 \hat \vec E - c^2 \vec k \cross \vec k \cross \hat \vec E + \omega_p ^2 \hat \vec E = 0
+{{< /katex >}}
+{{< katex display >}}
+\vec n \cross \vec n \cross \hat \vec E + (1 - \frac{\omega_p ^2}{\omega^2} ) \hat \vec E = 0
+{{< /katex >}}
+where
+{{< katex display >}}
+\vec n = \frac{c \vec k}{n}
+{{< /katex >}}
+{{< katex display >}}
+\vec n \cross \vec n \cross \hat \vec E + \frac{\epsilon}{\epsilon_0} \hat \vec E = 0
+{{< /katex >}}
+In general, for non-isomorphic permittivity we'll have a tensor result
+{{< katex display >}}
+\vec n \cross \vec n \cross \hat \vec E + \frac{\hat{\overline \epsilon}}{\epsilon_0} \cdot \hat \vec E = 0
+{{< /katex >}}
+
+Using vector identity
+{{< katex display >}}
+\vec n \cross \vec n \cross \vec E = \vec n (\vec n \cdot \vec E) - \vec E n ^2
+{{< /katex >}}
+Converting to tensor notation,
+{{< katex display >}}
+= n_i n_j E_j - E_i n^2
+{{< /katex >}}
+{{< katex display >}}
+= (n_i n_j - n ^2 I_{ij}) E_j
+{{< /katex >}}
+and substituting back
+{{< katex display >}}
+E_j \frac{\epsilon}{\epsilon_0} I_{ij} + \left( \frac{n_i n_j}{n^2} - I_{ij} \right) n^2 E_j = 0
+{{< /katex >}}
+{{< katex display >}}
+\left( \left( \frac{\epsilon(\omega)}{\epsilon_0} - n^2 \right) I_{ij} + n_i n_j \right) E_j = 0
+{{< /katex >}}
+The big operator acting on \\( \vec E \\) we call the dispersion tensor.
+{{< katex display >}}
+\overline D \cdot \vec E = 0
+{{< /katex >}}
+For non-trivial solutions, we need the determinant \\( \text{det}(\overline D) = 0 \\)
+{{< katex display >}}
+\hat{D}_{ij} = \left( \frac{\epsilon(\omega)}{\epsilon_0} - n^2 \right) I_{ij} + n_i n_j
+{{< /katex >}}
+
+As an example, if we have propagation in the \\( x \\)-direction
+{{< katex display >}}
+\vec n = (n, 0, 0)
+{{< /katex >}}
+Then the various components of
+{{< katex display >}}
+(n_i n_j - n^2 I_{ij})
+{{< /katex >}}
+are
+{{< katex display >}}
+x \rightarrow \qquad n^2 - n^2 = 0
+{{< /katex >}}
+{{< katex display >}}
+y \rightarrow \qquad 0 - n^2 = -n^2
+{{< /katex >}}
+{{< katex display >}}
+z \rightarrow \qquad 0 - n^2 = - n^2
+{{< /katex >}}
+so the dispersion tensor looks like
+{{< katex display >}}
+\begin{bmatrix}
+\epsilon(\omega)/\epsilon_0 & 0 & 0 \\
+0 & \frac{\epsilon}{\epsilon_0} - n^2 & 0 \\
+0 & 0 & \frac{\epsilon}{\epsilon_0}
+\end{bmatrix}
+{{< /katex >}}
+We don't need to invert this, we just get three equations
+{{< katex display >}}
+\hat E_x (\epsilon / \epsilon_0) = 0
+{{< /katex >}}
+{{< katex display >}}
+\hat E_y (\epsilon / \epsilon_0 - n^2) = 0
+{{< /katex >}}
+{{< katex display >}}
+E_z (\epsilon / \epsilon_0 - n^2) = 0
+{{< /katex >}}
+In the parallel direction \\( k_\parallel \\), we get \\( \epsilon = 0 \\). In the transverse directions \\( k_\perp \\) we get \\( \epsilon = n^2 \\)
+
+{{< katex display >}}
+k_\parallel \quad 1 - \frac{\omega_p ^2}{\omega ^2} = 0
+{{< /katex >}}
+{{< katex display >}}
+k_{\perp, 1} \qquad 1 - \frac{\omega_p ^2}{\omega ^2} - \frac{c^2 k^2}{\omega^2} = 0
+{{< /katex >}}
+{{< katex display >}}
+k_{\perp, 2} \qquad 1 - \frac{\omega_p ^2}{\omega ^2} - \frac{c^2 k^2}{\omega^2} = 0
+{{< /katex >}}
+We can solve these because they're just functions of \\( \omega^2 \\). The first solution is
+{{< katex display >}}
+\omega ^2 = \omega_p ^2
+{{< /katex >}}
+which is a static plasma oscillation. In the other solutions, we get the **ordinary plasma wave**
+{{< katex display >}}
+\omega ^2 = \omega _p ^2 + c^2 k^2
+{{< /katex >}}
+This is what the dispersion relation becomes when light enters a plasma, from the free space relation \\( \omega ^2 = c^2 k^2 \\). The ordinary plasma wave is dispersive, since the phase and group velocities are not equal to each other.
