--- a/content/notes/UWAA556/ch02-2.md
+++ b/content/notes/UWAA556/ch02-2.md
@@ -59,7 +59,7 @@ We can also use index notation to make the tensor operations clearer. Repeated i
 \partial _i \equiv \pdv{}{x_i}
 {{< /katex >}}
 {{< katex display >}}
-\partial_i x_i = \equiv \sum_i \partial_i x_i = \div \vec x
+\partial_i x_i \equiv \sum_i \partial_i x_i = \div \vec x
 {{< /katex >}}
 
 Writing out the momentum equation in index notation:
