Finish notes on cold magnetized plasma dispersion relation

--- a/content/notes/UWAA556/ch02-3.md
+++ b/content/notes/UWAA556/ch02-3.md
@@ -532,8 +532,6 @@ To answer the question of whether the index of refraction is real and continuous
 
 To draw our CMA diagram we will plot \\( \frac{\omega_p ^2}{\omega^2} \\) along the x axis and \\( \frac{\omega_c}{\omega} \\) along the y-axis. We then divide the space by lines defined by cutoffs and resonances. To do so, we first need to classify the cutoffs and resonances of our dispersion relation.
 
-<p align="center"> <img alt="cma-diagram.png" src="/r/img/556/cma-diagram.png" /> </p>
-
 We will get cut-offs whenever any of the following are true:
 {{< katex display >}}
 P = 0 \qquad R = 0 \qquad L = 0
@@ -556,5 +554,116 @@ So R-wave resonance happens when \\( \omega = \omega_{c, e} \\). We get electron
 
 Cut-offs for the R wave are
 {{< katex display >}}
-n_R ^2 = R = 0 \rightarrow \omega_R = 
+n_R ^2 = R = 0 \rightarrow \omega_R = 0
 {{< /katex >}}
+{{< katex display >}}
+\omega_R = \frac{\omega_{c, e} - \omega_{c, i}}{2} + \left( \left(\frac{\omega_{c, e} + \omega_{c, i}}{2} \right)^2  + \omega_p ^2 \right)^{1/2}
+{{< /katex >}}
+In the strongly magnetized limit \\( \omega_p / \omega_c \ll 1 \\)
+{{< katex display >}}
+\omega_R \approx \omega_{c, e} \left( 1 + \frac{\omega_{p, e}^2}{\omega_{c, e}^2} \right) \approx \omega_{c, e} \quad \text{(low-density)}
+{{< /katex >}}
+In the un-magnetized limit \\( \omega_p / \omega _c \gg 1 \\)
+{{< katex display >}}
+\omega_R \approx \omega_{p, e} + \frac{1}{2} \omega_{c, e} \approx \omega_{p, e} \quad \text{(high-density)}
+{{< /katex >}}
+
+Consider the high-frequency and low-frequency limits to get a feel for the situation:
+
+{{< katex display >}}
+\omega \rightarrow 0 \quad \rightarrow \quad n_R ^2 \approx 1 + \frac{\omega_{p, i}^2}{\omega_{c, i} ^2} \quad \text{(MHD limit)}
+{{< /katex >}}
+{{< katex display >}}
+\omega \rightarrow \infty \quad \rightarrow \quad n_R ^2 \approx 1 - \frac{\omega_{p, e}^2}{\omega^2} \quad \text{(ordinary wave)}
+{{< /katex >}}
+
+We see that low-frequency R-waves elicit a MHD response.
+
+Repeating the same process for L-waves, \\( n_L ^2 - L = 0 \\) we get
+{{< katex display >}}
+n_L ^2 = 1 - \frac{\omega_{p, e}^2}{\omega(\omega - |\omega_{c, i}|)} - \frac{\omega_{p, i}^2}{\omega(\omega + |\omega_{c, e}|)}
+{{< /katex >}}
+
+The resonance condition is \\( \omega = \omega_{c, i} \\) because positively charged ions orbit clockwise with respect to the magnetic field.
+
+Cut-off happens when
+{{< katex display >}}
+\omega_L = \frac{\omega_{c, i} - \omega_{c, e}}{2} + \left[ \left(\frac{\omega_{c, i} + \omega_{c, e}}{2}\right)^2 + \omega_p ^2 \right]^{1/2}
+{{< /katex >}}
+
+The limits for the L-wave are:
+
+- Low density: \\( \omega_L \approx \omega_{c, i} (1 + \frac{\omega_{p, i}^2}{\omega_{c, i}^2}) \approx \omega_{c, i} \\)
+- High density: \\( \omega_L \approx \omega_{p, e} - \frac{1}{2} \omega_{c, e} \approx \omega_{p, e} \\)
+- Low frequency: \\( n_L ^2 \approx n_R ^2 \approx 1 + \frac{\omega_{p, i}^2}{\omega_{c, i}^2} \\)
+- High frequency: \\( n_L ^2 \approx n_R ^2 \approx 1 - \frac{\omega_{p, e}^2}{\omega^2} \\)
+
+Now, what about perpendicular propagation?
+
+**Ordinary Wave**
+
+For \\( \theta = \pi / 2 \\), because \\( \vec E  \\) can be either parallel or perpendicular to the cyclotron orbits, we get hybrid oscillations. First, look at the ordinary plasma wave with \\( \vec E \\) linear polarized in the direction of \\( \vec B \\).
+{{< katex display >}}
+n_O ^2 = 1 - \frac{\omega_p ^2}{\omega^2}
+{{< /katex >}}
+The resonance condition here is \\( v_\phi > c \\), which doesn't happen, so there aren't any resonances. The cut-off condition is the same \\( \omega_O = \omega_p \\) for the ordinary wave.
+
+**Extraordinary Wave**
+
+\\( \vec E  \\) could be perpendicular to the direction of the waves, or parallel. If polarized, needs to be rotating around \\( \vec k \\)
+
+{{< katex display >}}
+n_X ^2 = \frac{RL}{S} = \frac{((\omega + \omega_{c, i})(\omega - \omega_{c, e})- \omega_p ^2)((\omega - \omega_{c, i})(\omega + \omega_{c, e}) - \omega_p ^2)}{(\omega ^2 - \omega_{c, i}^2)(\omega^2 - \omega_{c, e}^2) + \omega_p ^2(\omega_{c, e} \omega_{c, i} - \omega ^2)}
+{{< /katex >}}
+
+We can immediately see that the orbits are going to be complicated. With everything nicely factored, we look for resonances and cutoffs
+
+- Resonance: \\( n_x ^2 \rightarrow \infty \\)
+{{< katex display >}}
+(\omega ^2 - \omega_{c, i}^2)(\omega^2 - \omega_{c, e}^2) + \omega_p ^2(\omega_{c, e} \omega_{c, i} - \omega^2) \rightarrow 0
+{{< /katex >}}
+{{< katex display >}}
+\omega^2 = \frac{\omega_{u, e}^2 + \omega_{u, i}^2}{2} \pm \left[ \left( \frac{\omega_{u, e} - \omega_{u, i}}{2}\right)^2 + \omega_{p, e}^2 \omega_{p, i}^2 \right]^{1/2}
+{{< /katex >}}
+where we define the upper hybrid frequency
+{{< katex display >}}
+\omega_{u, \alpha}^2 \equiv \omega_{p, \alpha}^2 + \omega_{c, \alpha}^2
+{{< /katex >}}
+Approximating the exact solutions by disregarding terms that are small in the electron/ion mass ratio, we get two resonances of the extraordinary wave
+{{< katex display >}}
+\omega_{UH}^2 \equiv \omega_{p, e}^2 + \omega_{c, e}^2 \quad \text{Upper-hybrid X-wave}
+{{< /katex >}}
+{{< katex display >}}
+\omega_{LH}^2 \equiv \omega_{c, e} \omega_{c, i} \frac{\omega_{p, e}^2 + \omega_{c, e} \omega_{c, i}}{\omega_{p, e}^2 + \omega_{c, e}^2} \approx \omega_{c, e} \omega_{c, i} \quad \text{Lower-hybrid X-wave}
+{{< /katex >}}
+
+The resonances of the X-wave are approximately at the norm (upper hybrid) and geometric mean (lower hybrid) of the electron frequencies.
+
+- Cut-offs
+
+Cut-offs of the extraordinary wave correspond with roots of the numerator
+{{< katex display >}}
+\omega_X = \left[ \left(\frac{\omega_{c, e} + \omega_{c, i}}{2} \right)^2 + \omega_p ^2 \right] ^{1/2} \pm \frac{\omega_{p, e} - \omega_{c, i}}{2}
+{{< /katex >}}
+
+- High-density: \\( \omega_X \rightarrow \omega_{p, e} \pm \frac{1}{2} \omega_{c, e} \\)
+- Low-density: \\( \omega_X \rightarrow \omega_{ce} (1 + \frac{\omega_{p, e}^2}{\omega_{c, e}^2}) \\) and \\( \omega_{c, i} (1 + \frac{\omega_{c, e}}{\omega_{c, i}} \frac{\omega_{p, e}^2}{\omega_{c, e}^2}) \\)
+- Low-frequency: \\( n_X = 1 + \frac{\omega_{p, i}^2}{\omega_{c, i}^2} \\)
+- High-frequency: \\( n_X^2 = 1 \\), same as the free-space wave, so the plasma is transparent.
+
+Back to the general case, the cut-offs occur when \\( PRL = 0 \\), and resonances occur at \\( \tan ^2 \theta = - \frac{P}{S} \\). Tracing out these surfaces in a CMA diagram, we get:
+
+<p align="center"> <img alt="cma-diagram.png" src="/r/img/556/cma-diagram.png" /> </p>
+
+Each line is a cutoff or resonance, except the line at \\( RL = PS \\) where the O and X waves both follow the plasma relation \\( n^2 = P \\). We can fill in the diagram with wave-normal surfaces which encode the possibility of information transfer. If a wave can't propagate due to cut-off or bandgap, it becomes invisible.
+
+- Inside any volume bounded by cutoff/resonance curves (BV) there are no cutoffs
+- If there is a resonance \\( n \rightarrow \infty \\) inside a bounded volume, then everywhere else in that bounded volume there exist resonance angles \\( \theta \\) corresponding to the same resonance. That is because \\( P / S \\) can not change sign within a bounded volume.
+- For any angle \\( \theta \\) where \\( n \neq 0 \\) or \\( \infty \\), then only one branch will be either real or imaginary. There is no transition from cut-off to not-cut-off
+- The wave normal surface is symmetric about the magnetic axis and \\( \theta = \pi/2 \\)
+- Classes of solutions can only conincide where \\( \theta = 0, \pi/2 \\) or \\( RL = PS \\)
+
+There are three topological possibilities for wave-normal surfaces in the CMA diagram.
+
+1) \\( v_\phi \neq 0 \\) for all angles \\( \theta \\) (wave exists for all \\( \theta \\)). Then the wave-normal diagram is roughly spherical
+2) \\( P / S < 0> \\), so there is a solution \\( \tan ^2 \theta = - P / S \\). Then the resonance angle defines a cone about the magnetic axis. Propagation will either be allowed everywhere inside the cone, or everywhere outside the cone.
